force-app/main/default/objects/BMCServiceDesk__Release_History__c/BMCServiceDesk__Release_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpReleaseHistory</customHelpPage>
    <description>Stores history data of all actions that have been performed on a release.</description>
    <label>Release History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Release History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>