force-app/main/default/objects/BMCServiceDesk__Release_History__c/fields/BMCServiceDesk__Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>