force-app/main/default/objects/BMCServiceDesk__Release_History__c/fields/BMCServiceDesk__FKAction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToRelease__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Action__c</referenceTo>
    <relationshipLabel>Related Releases</relationshipLabel>
    <relationshipName>Release_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>