force-app/main/default/objects/BMCServiceDesk__Release_History__c/fields/BMCServiceDesk__FKCreated_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically set to the user who created the history record.</inlineHelpText>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>