force-app/main/default/objects/BMCServiceDesk__Release_History__c/fields/BMCServiceDesk__FKRelease__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRelease__c</fullName>
    <label>Release</label>
    <referenceTo>BMCServiceDesk__Release__c</referenceTo>
    <relationshipLabel>Action History</relationshipLabel>
    <relationshipName>Release_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>