force-app/main/default/objects/BMCServiceDesk__Release_History__c/fields/BMCServiceDesk__FKStaff__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds assigned staff information from parent record.</description>
    <inlineHelpText>This field holds assigned staff information from parent record.</inlineHelpText>
    <label>Current Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Histories_Staff</relationshipName>
    <type>Lookup</type>
</CustomField>