force-app/main/default/objects/BMCServiceDesk__Release_History__c/fields/BMCServiceDesk__System__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>