force-app/main/default/objects/BMCServiceDesk__Release_History__c/validationRules/BMCServiceDesk__Action_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Action_ID_Required</fullName>
    <active>true</active>
    <description>This rule checks for blank or empty Action</description>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKAction__c) , ISBLANK(BMCServiceDesk__FKAction__c))</errorConditionFormula>
    <errorMessage>Please enter Action.</errorMessage>
</ValidationRule>